--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "prettier": "^3.6.2"
   },
   "peerDependencies": {
-    "typescript": "^5",
-    "astro": "^4.0.0"
+    "typescript": ">=4.8.0",
+    "astro": ">=3.0.0"
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
@@ -21,7 +21,7 @@
     "prepare": "bun run build",
     "format": "prettier --write ."
   },
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Inline CMS editing",
   "main": "./dist/index.js",
   "types": "./index.d.ts",
